objects/Artera_Job__c.object
<CustomObject>
    <label>Job</label>
    <nameField>
        <displayFormat>J-{0000}</displayFormat>
        <label>Job Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Jobs</pluralLabel>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset__c</referenceTo>
        <relationshipLabel>Jobs</relationshipLabel>
        <relationshipName>Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Finish__c</fullName>
        <label>Finish</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Job Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Created</fullName>
                </value>
                <value>
                    <fullName>Assignment in Progress</fullName>
                </value>
                <value>
                    <fullName>Dispatched</fullName>
                </value>
                <value>
                    <fullName>Dispatched - Acknowledged</fullName>
                </value>
                <value>
                    <fullName>Pending Supervisor Approval</fullName>
                </value>
                <value>
                    <fullName>Pending Admin Approval</fullName>
                </value>
                <value>
                    <fullName>Pending Billing Approval</fullName>
                </value>
                <value>
                    <fullName>Pending Payroll Approval</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Company__c</field>
                <operation>equals</operation>
                <value>025</value>
            </filterItems>
            <filterItems>
                <field>Account.Status__c</field>
                <operation>equals</operation>
                <value>A</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Jobs</relationshipLabel>
        <relationshipName>Hydro_X_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Jobs</relationshipLabel>
        <relationshipName>Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Project__c.Status__c</field>
                <operation>equals</operation>
                <value>A</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Jobs</relationshipLabel>
        <relationshipName>Jobs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Job_Date__c</fullName>
        <label>Job Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Job_Type__c</fullName>
        <label>Job Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Off Duty</fullName>
                </value>
                <value>
                    <fullName>Non- Billable</fullName>
                </value>
                <value>
                    <fullName>Leave</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                    <default>true</default>
                    <label>Normal</label>
                </value>
                <value>
                    <fullName>Urgent</fullName>
                </value>
                <value>
                    <fullName>Critical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Signed_By__c</fullName>
        <label>Signed  By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Name__c</fullName>
        <formula>Owner:User.FirstName&amp;&apos; &apos;&amp;Owner:User.LastName</formula>
        <label>Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_ID__c</fullName>
        <formula>Project__r.Project_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Supervisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supervisor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Account__c</field>
                <operation>equals</operation>
                <valueField>Work_Order__c.Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Work_Order__c</referenceTo>
        <relationshipLabel>Jobs</relationshipLabel>
        <relationshipName>Jobs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Jobs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_CDL__c</fullName>
        <label>Primary CDL</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <formula>Contact__r.FirstName  &amp;&quot; &quot;&amp; Contact__r.LastName</formula>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Completed__c</fullName>
        <formula>IF(ISPICKVAL(Status__c, &quot;Completed&quot;),true,false)</formula>
        <label>Is Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Location__c</fullName>
        <label>Job Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <formula>Project__r.Name</formula>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Artera_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Area</label>
        <referenceTo>Artera_Region__c</referenceTo>
        <relationshipLabel>Jobs</relationshipLabel>
        <relationshipName>Hydro_X_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <formula>Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDF_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PDF Generated ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payroll_Hours__c</fullName>
        <label>Total Hours</label>
        <summarizedField>Artera_Job_Allocation__c.Total_Hours__c</summarizedField>
        <summaryForeignKey>Artera_Job_Allocation__c.Job__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Approve_Ticket__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approve Ticket?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact1_Email__c</fullName>
        <label>Customer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_number__c</fullName>
        <formula>Contact__r.Phone</formula>
        <label>Contact Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resouces_Names__c</fullName>
        <label>Resources Name</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Job_No__c</fullName>
        <label>Customer Job No.</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Description__c</fullName>
        <label>Job Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Supervisor_Name__c</fullName>
        <formula>IF( ISBLANK( Supervisor__c ) ,&apos;-&apos;, Supervisor__r.FirstName&amp;&apos; &apos;&amp;Supervisor__r.LastName)</formula>
        <label>Supervisor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completion_Notes__c</fullName>
        <label>Completion Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dispatcher_Notes__c</fullName>
        <label>Dispatcher Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sent_To_Dynamics__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent To Dynamics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cancellation_Reason__c</fullName>
        <label>Cancellation Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Requested by Customer</fullName>
                </value>
                <value>
                    <fullName>Cancellation due to weather</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Duplicate Job</fullName>
                </value>
                <value>
                    <fullName>Created by error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Created_via_automation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created via automation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Job_Ticket_Hours__c</fullName>
        <label>Total Billable Hours</label>
        <summarizedField>Job_Ticket_Detail__c.Operator_Hours__c</summarizedField>
        <summaryForeignKey>Job_Ticket_Detail__c.Job__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Cloned_From_Existing_Job__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cloned From Existing Job</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Non_Billable_Hours__c</fullName>
        <formula>IF(Payroll_Hours__c - Total_Job_Ticket_Hours__c&gt;0,Payroll_Hours__c - Total_Job_Ticket_Hours__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Non-Billable Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Truck_Changed_by_Operator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Truck Changed by Operator?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>created_by_using_multi_Job_creation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>created by using multi Job creation</label>
        <type>Checkbox</type>
    </fields>
    <recordTypes>
        <fullName>Customer</fullName>
        <active>true</active>
        <label>Customer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Internal</fullName>
        <active>true</active>
        <label>Internal</label>
    </recordTypes>
    <sharingReasons>
        <fullName>Share_jobs_without_region_restriction__c</fullName>
        <label>Share jobs without region restriction</label>
    </sharingReasons>
    <validationRules>
        <fullName>Restrict_Job_date_change</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISCHANGED(Job_Date__c ),
$User.Bypass_Validation__c = FALSE)</errorConditionFormula>
        <errorDisplayField>Job_Date__c</errorDisplayField>
        <errorMessage>You cannot update the Job Date after the job is created</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Use_only_active_projects</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Project__r.Status__c,&quot;I&quot;),$User.Bypass_Validation__c = FALSE)</errorConditionFormula>
        <errorDisplayField>Project__c</errorDisplayField>
        <errorMessage>The Project you have selected is inactive, please select an active project and try again.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>job_completed_Validation</fullName>
        <active>true</active>
        <description>when job status is completed the user is not able to edit the record Apart from the user who has the permission to bypass the validation.</description>
        <errorConditionFormula>AND(ISPICKVAL(PRIORVALUE( Status__c ), &quot;Completed&quot;), $User.Bypass_Validation__c = FALSE)</errorConditionFormula>
        <errorMessage>You can&apos;t change the record information.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_fields_validation</fullName>
        <active>false</active>
        <errorConditionFormula>ISBLANK( Name  )  &amp;&amp;  ISBLANK( Job_Location__c )  &amp;&amp;  ISBLANK( Job_Date__c )</errorConditionFormula>
        <errorMessage>Please fill up the required fields</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_picklist_values_for_Admin</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
$Profile.Name =&apos;Hydro-X Admin&apos;,
TEXT( Status__c )!= &apos;Pending Billing Approval&apos;,
ISCHANGED( Status__c )

||
$Profile.Name =&apos;Hydro-X Admin&apos;,
TEXT( Status__c )!= &apos;Pending Supervisor Approval&apos;,
ISCHANGED( Status__c )
||
$Profile.Name =&apos;Hydro-X Admin&apos;,
TEXT( Status__c )!= &apos;Pending Admin Approval&apos;,
ISCHANGED( Status__c )
)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Error: You cannot update the job to this status.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_Time_not_greater_than_End_Time</fullName>
        <active>false</active>
        <errorConditionFormula>Start_Date__c   &gt;   End_Date__c</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>Error -End Time should be Greater than Start Time</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_picklist_for_Acc_Receivables</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
$Profile.Name =&apos;Hydro-X Account Receivables&apos;,
TEXT( Status__c )!= &apos;Pending Billing Approval&apos;,
ISCHANGED( Status__c )

||
$Profile.Name =&apos;Hydro-X Account Receivables&apos;,
TEXT( Status__c )!= &apos;Pending Payroll Approval&apos;,
ISCHANGED( Status__c )
)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Error: You cannot update the job to this status.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Before_Dispatching_Job_Please_Add_Asset</fullName>
        <active>false</active>
        <errorConditionFormula>AND( 

ISPICKVAL( Status__c , &apos;Dispatched&apos;)  || 
ISPICKVAL( Status__c , &apos;Dispatched - Acknowledged&apos;) || 

ISPICKVAL( Status__c , &apos;Pending Supervisor Approval&apos;) ||

ISPICKVAL( Status__c , &apos;Pending Admin Approval&apos;) ||
ISPICKVAL( Status__c , &apos;Pending Billing Approval&apos;) ||
ISPICKVAL( Status__c , &apos;Completed&apos;)  ,
 ISBLANK( Asset__c ) 


)</errorConditionFormula>
        <errorMessage>Before Dispatching a Job Please Add Asset Field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_picklist_values_for_Supervisor</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
            $Profile.Name =&apos;Hydro-X Supervisor&apos;,
            TEXT( Status__c )!= &apos;New&apos;,
            ISCHANGED( Status__c )

 || 
$Profile.Name =&apos;Hydro-X Supervisor&apos;,
            TEXT( Status__c )!= &apos;Assignment in Progress&apos;,
            ISCHANGED( Status__c )
 || 
$Profile.Name =&apos;Hydro-X Supervisor&apos;,
            TEXT( Status__c )!= &apos;Dispatched&apos;,
            ISCHANGED( Status__c )
 || 
$Profile.Name =&apos;Hydro-X Supervisor&apos;,
            TEXT( Status__c )!= &apos;Dispatched - Acknowledged&apos;,
            ISCHANGED( Status__c )
|| 
$Profile.Name =&apos;Hydro-X Supervisor&apos;,
            TEXT( Status__c )!= &apos;Pending Supervisor Approval&apos;,
            ISCHANGED( Status__c )
|| 
$Profile.Name =&apos;Hydro-X Supervisor&apos;,
            TEXT( Status__c )!= &apos;Pending Admin Approval&apos;,
            ISCHANGED( Status__c )
|| 
$Profile.Name =&apos;Hydro-X Supervisor&apos;,
            TEXT( Status__c )!= &apos;Cancelled&apos;,
            ISCHANGED( Status__c )
)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Error: You cannot update the job to this status.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>restrict_picklist_values_for_dispatcher</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
$Profile.Name =&apos;Hydro-X Dispatcher&apos;,
TEXT( Status__c )!= &apos;New&apos;,
ISCHANGED( Status__c )

||
$Profile.Name =&apos;Hydro-X Dispatcher&apos;,
TEXT( Status__c )!= &apos;Assignment in Progress&apos;,
ISCHANGED( Status__c )
||
$Profile.Name =&apos;Hydro-X Dispatcher&apos;,
TEXT( Status__c )!= &apos;Dispatched&apos;,
ISCHANGED( Status__c )
||
$Profile.Name =&apos;Hydro-X Dispatcher&apos;,
TEXT( Status__c )!= &apos;Dispatched - Acknowledged&apos;,
ISCHANGED( Status__c )
||
$Profile.Name =&apos;Hydro-X Dispatcher&apos;,
TEXT( Status__c )!= &apos;Created&apos;,
ISCHANGED( Status__c )
||
$Profile.Name =&apos;Hydro-X Dispatcher&apos;,
TEXT( Status__c )!= &apos;Pending Admin Approval&apos;,
ISCHANGED( Status__c )
|| 
$Profile.Name =&apos;Hydro-X Dispatcher&apos;,
TEXT( Status__c )!= &apos;Cancelled&apos;,
ISCHANGED( Status__c )
)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Error: You cannot update the job to this status.</errorMessage>
    </validationRules>
</CustomObject>